# rs-mq-topic

./: Cargo.toml  Readme.md
src/: main.rs
